# cuboid_slam_with_bbox_constraints

./: README.md
cmake_det_slam/: CMakeLists.txt  cabinet_slam_single.cpp  main_bbox_constraints_detection.cpp
cmake_det_slam/include/: dataset_tum.h  plane_detection.h
cmake_det_slam/include/detect_cuboid_bbox/: detect_cuboid_bbox.h  matrix_utils.h  object_3d_util.h
cmake_det_slam/include/object_slam/: Frame.h  g2o_Object.h  matrix_utils.h
cmake_det_slam/src/: dataset_tum.cpp  detect_cuboid_bbox.cpp  main_rgbd_opti_tum.cpp  matrix_utils.cpp  object_3d_util.cpp  plane_detection.cpp
data/: TUM3.yaml  depth.txt  output_cam_poses.txt  output_obj_poses.txt  rgb.txt  truth_objects.txt  yolov3_bbox.txt
data/bbox_2d_yolov2/: 0000_yolo2_0.15.txt  0001_yolo2_0.15.txt  0002_yolo2_0.15.txt  0003_yolo2_0.15.txt  0004_yolo2_0.15.txt  0005_yolo2_0.15.txt  0006_yolo2_0.15.txt  0007_yolo2_0.15.txt  0008_yolo2_0.15.txt  0009_yolo2_0.15.txt  0010_yolo2_0.15.txt  0011_yolo2_0.15.txt  0012_yolo2_0.15.txt  0013_yolo2_0.15.txt  0014_yolo2_0.15.txt  0015_yolo2_0.15.txt  0016_yolo2_0.15.txt  0017_yolo2_0.15.txt  0018_yolo2_0.15.txt  0019_yolo2_0.15.txt  0020_yolo2_0.15.txt  0021_yolo2_0.15.txt  0022_yolo2_0.15.txt  0023_yolo2_0.15.txt  0024_yolo2_0.15.txt  0028_yolo2_0.15.txt  0029_yolo2_0.15.txt  0031_yolo2_0.15.txt  0032_yolo2_0.15.txt  0033_yolo2_0.15.txt  0034_yolo2_0.15.txt  0035_yolo2_0.15.txt  0036_yolo2_0.15.txt  0037_yolo2_0.15.txt  0038_yolo2_0.15.txt  0039_yolo2_0.15.txt  0040_yolo2_0.15.txt  0041_yolo2_0.15.txt  0043_yolo2_0.15.txt  0044_yolo2_0.15.txt  (+10 more)
ros_det_slam/src/cube_slam_bbox/: CMakeLists.txt  package.xml
ros_det_slam/src/cube_slam_bbox/include/detect_3d_cuboid/: detect_3d_cuboid.h  object_3d_util.h
ros_det_slam/src/cube_slam_bbox/launch/: object_slam_example.launch
ros_det_slam/src/cube_slam_bbox/rviz/: object_slam.rviz
ros_det_slam/src/cube_slam_bbox/src/: box_proposal_detail.cpp  main_object_slam_bbox.cpp  matrix_utils.cpp  object_3d_util.cpp
